[package]
edition = "2021"
name = "mixer-node"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2.0.1"

[dependencies]
winmix = "0.1.2"
napi = "2.0"
napi-derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-icons = "0.2.1"

[profile.release]
lto = true
strip = "symbols"
